// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`formatter formats an empty module 1`] = `
"module Example {
}
"
`;

exports[`formatter formats spacing after the module keyword 1`] = `
"module Example {
}
"
`;

exports[`formatter formats spacing before the module brace 1`] = `
"module Example {
}
"
`;

exports[`formatter formats excess final newlines 1`] = `
"module Example {
}
"
`;

exports[`formatter indents a variable declaration in a module 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats spacing after a type colon 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter removes spacing before a type colon 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats spacing after var 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats a constant declaration 1`] = `
"module Example {
  const N: int
}
"
`;

exports[`formatter places declarations on separate lines 1`] = `
"module Example {
  var a: int
  var b: int
}
"
`;

exports[`formatter formats a Boolean assumption 1`] = `
"module Example {
  assume Safe = true
}
"
`;

exports[`formatter formats spacing around assumption equals 1`] = `
"module Example {
  assume Safe = true
}
"
`;

exports[`formatter formats an integer value definition 1`] = `
"module Example {
  val answer = 42
}
"
`;

exports[`formatter formats a Boolean value definition 1`] = `
"module Example {
  val ready = true
}
"
`;

exports[`formatter formats a string value definition 1`] = `
"module Example {
  val greeting = "hello"
}
"
`;

exports[`formatter formats a typed value definition 1`] = `
"module Example {
  val answer: int = 42
}
"
`;

exports[`formatter formats an integer addition expression 1`] = `
"module Example {
  val total = 1 + 2
}
"
`;

exports[`formatter formats an identifier value expression 1`] = `
"module Example {
  const source: int
  val copy = source
}
"
`;

exports[`formatter formats a parenthesized expression 1`] = `
"module Example {
  val total = (1 + 2)
}
"
`;

exports[`formatter formats an integer subtraction expression 1`] = `
"module Example {
  val delta = 3 - 1
}
"
`;

exports[`formatter preserves a source hashbang 1`] = `
"#!/usr/bin/env -S quint typecheck
module Example {
}
"
`;

exports[`formatter formats multiple top-level modules 1`] = `
"module First {
}

module Second {
}
"
`;
